--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,7 @@ jobs:
         condition: succeededOrFailed()
       - powershell: |
           npm install eclint
-          node .\node_modules\eclint\bin\eclint.js check
+          node ./node_modules/eclint/bin/eclint.js check
         displayName: "Validate editorconfig"
 
   - job: "Linux_PSCore_Build_DAS_Continuous_Integration"
@@ -51,5 +51,5 @@ jobs:
         condition: succeededOrFailed()
       - pwsh: |
           npm install eclint
-          node .\node_modules\eclint\bin\eclint.js check
+          node ./node_modules/eclint/bin/eclint.js check
         displayName: "Validate editorconfig"
