--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,7 +25,7 @@ jobs:
           testResultsFormat: NUnit
           testResultsFiles: "**/TEST-*.xml"
         condition: succeededOrFailed()
-      - powershell: |
+      - script: |
           npm install eclint
           node ./node_modules/eclint/bin/eclint.js check
         displayName: "Validate editorconfig"
@@ -50,7 +50,7 @@ jobs:
           testResultsFormat: NUnit
           testResultsFiles: "**/TEST-*.xml"
         condition: succeededOrFailed()
-      - pwsh: |
+      - script: |
           npm install eclint
           node ./node_modules/eclint/bin/eclint.js check
         displayName: "Validate editorconfig"
