--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,6 @@ jobs:
         condition: succeededOrFailed()
       - script: |
           npm install eclint
-          node ./node_modules/eclint/bin/eclint.js check
+          node $(npm root)/eclint/bin/eclint.js check $(System.DefaultWorkingDirectory)
         displayName: "Validate editorconfig"
         workingDirectory: $(System.DefaultWorkingDirectory)
