Whitespace around pipe, dedup editorconfig settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   "powershell.codeFormatting.ignoreOneLineBlock": false,
   "powershell.codeFormatting.useCorrectCasing": true,
   "powershell.codeFormatting.preset": "Custom",
-  "powershell.codeFormatting.alignPropertyValuePairs": true
+  "powershell.codeFormatting.alignPropertyValuePairs": true,
+  "powershell.codeFormatting.whitespaceAroundPipe": true
 }
