--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
   "powershell.codeFormatting.useCorrectCasing": true,
   "powershell.codeFormatting.preset": "Custom",
   "powershell.codeFormatting.alignPropertyValuePairs": true,
-  "powershell.codeFormatting.whitespaceAroundPipe": true
+  "powershell.codeFormatting.whitespaceAroundPipe": true,
+  "files.eol": "\n"
 }
