--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -55,3 +55,25 @@ jobs:
           testResultsFormat: NUnit
           testResultsFiles: "**/TEST-*.xml"
         condition: succeededOrFailed()
+
+  - deployment: "GitHubRelease"
+    displayName: "Create Release in GitHub"
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/cd-releases'))
+    pool:
+      name: "DAS - Continuous Deployment"
+    environment: GitHub
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+            - task: gittools.gitversion.gitversion-task.GitVersion@4
+              displayName: GitVersion
+            - task: GitHubRelease@0
+              inputs:
+                gitHubConnection: "SFA"
+                repositoryName: "$(Build.Repository.Name)"
+                action: "create"
+                target: "$(Build.SourceVersion)"
+                tagSource: "manual"
+                tag: "$(Build.BuildNumber)"
+                addChangeLog: true
