--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,6 +59,9 @@ jobs:
   - deployment: "GitHubRelease"
     displayName: "Create Release in GitHub"
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/cd-releases'))
+    dependsOn:
+      - "Windows_PS51_Build_DAS_Continuous_Deployment"
+      - "Linux_PSCore_Build_DAS_Continuous_Integration"
     pool:
       name: "DAS - Continuous Deployment"
     environment: GitHub
