--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,7 +58,7 @@ jobs:
 
   - deployment: "GitHubRelease"
     displayName: "Create Release in GitHub"
-    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/github-assets'))
+    condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     dependsOn:
       - "Windows_PS51_Build_DAS_Continuous_Deployment"
       - "Linux_PSCore_Build_DAS_Continuous_Integration"
