Add infrastructure scripts as GitHub release assets (#14)
* Push scripts as assets on github release

* Revert branch condition to master post-testing

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,3 +80,4 @@ jobs:
                 tagSource: "manual"
                 tag: "$(Build.BuildNumber)"
                 addChangeLog: true
+                assets: "$(System.DefaultWorkingDirectory)/Infrastructure-Scripts/**/*.ps1"
