--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ node_modules/
 package-lock.json
 AzureDevOps-Tasks/**/Task/Lib/
 AzureDevOps-Tasks/**/Task/ps_modules/
+AzureDevOps-Tasks/**/Release/
