--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,7 @@
 
 # Declare files that will always have LF line endings on checkout. (as per editorconfig)
 * text eol=lf
+
+# Denote all files that are truly binary and should not be modified.
+*.png binary
+*.jpg binary
