Point gitversion to config file

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,6 +73,8 @@ stages:
             steps:
               - task: gittools.gitversion-preview.gitversion-task.GitVersion@5
                 displayName: GitVersion
+                inputs:
+                  configFilePath: GitVersion.yml
               - task: GitHubRelease@0
                 inputs:
                   gitHubConnection: "SFA"
