--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,19 @@ pr: none
 
 
 stages:
+  - stage: Versioning
+    dependsOn: []
+    jobs:
+      - job: "GitVersion"
+        pool:
+          name: "DAS - Continuous Integration"
+        steps:
+          - task: gittools.gitversion-preview.gitversion-task.GitVersion@5
+            displayName: GitVersion
+            inputs:
+              configFilePath: GitVersion.yml
   - stage: Test
+    dependsOn: []
     jobs:
       - job: "Windows_PS51_Build_DAS_Continuous_Deployment"
         pool:
@@ -60,6 +72,9 @@ stages:
             condition: succeededOrFailed()
 
   - stage: Release
+    dependsOn:
+      - Versioning
+      - Test
     condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/master'))
     jobs:
     - deployment: "GitHubRelease"
@@ -71,8 +86,6 @@ stages:
         runOnce:
           deploy:
             steps:
-              - task: gittools.gitversion-preview.gitversion-task.GitVersion@5
-                displayName: GitVersion
               - task: GitHubRelease@0
                 inputs:
                   gitHubConnection: "SFA"
