Removed pipe and quotes on publish task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,9 +45,9 @@ stages:
               testResultsFormat: NUnit
               testResultsFiles: "**/TEST-*.xml"
             condition: succeededOrFailed()
-          - publish: |
-              "$(System.DefaultWorkingDirectory)/Infrastructure-Scripts"
-              "$(System.DefaultWorkingDirectory)/Code-Analysis-Scripts"
+          - publish:
+              $(System.DefaultWorkingDirectory)/Infrastructure-Scripts
+              $(System.DefaultWorkingDirectory)/Code-Analysis-Scripts
             artifact: Scripts
             displayName: "Publish Scripts"
 
