--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
 # Assign the following team as codeowners for this repository
-*      @smneal @NickGraham101 @rivoric @jack-education @mwevill @adam230594 @dalemorson
+*      @SkillsFundingAgency/das-platform-engineering
