--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,7 @@ stages:
           - task: PowerShell@2
             inputs:
               filePath: "Tests/Invoke-Tests.ps1"
+              pwsh: true
           - task: PublishTestResults@2
             displayName: "Publish Test Results **/TEST-*.xml"
             inputs:
