include all files in infrastructure-scripts directory

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -102,6 +102,4 @@ stages:
                   tagSource: "manual"
                   tag: "$(Build.BuildNumber)"
                   addChangeLog: true
-                  assets:
-                    $(Pipeline.Workspace)/Infrastructure-Scripts/*.ps1
-                    $(Pipeline.Workspace)/Infrastructure-Scripts/Set-AppRoleAssignments
+                  assets: $(Pipeline.Workspace)/Infrastructure-Scripts/*
