--- a/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
+++ b/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
@@ -37,4 +37,4 @@ stages:
               ServiceConnection: das-app-role-assignments-CDS
               ResourceName: $(AppServiceName1)
               Tenant: $(Tenant)
-              IsMultiRepoCheckout: true
+              IsMultiRepoCheckout: false
