--- a/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
+++ b/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
@@ -15,7 +15,7 @@ resources:
   - pipeline: das-employer-config
     project: Digital Apprenticeship Service
     source: das-employer-config
-    branch: master
+    branch: dasd-9869-app-role
 
 stages:
 - stage: Apply_Roles
