add in next object array

--- a/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
+++ b/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
@@ -37,5 +37,7 @@ stages:
               ServiceConnection: das-app-role-assignments-CDS
               ResourceName: $(AppServiceName1)
               Tenant: $(Tenant)
-              AADGroupObjectIdArray: $(DevAADGroupObjectId)
+              AADGroupObjectIdArray: |
+                $(DevAADGroupObjectId)
+                $(AdminAADGroupObjectId)
               IsMultiRepoCheckout: false
