--- a/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
+++ b/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
@@ -37,7 +37,5 @@ stages:
               ServiceConnection: das-app-role-assignments-CDS
               ResourceName: $(AppServiceName1)
               Tenant: $(Tenant)
-              AADGroupObjectIdArray: |
-                $(DevAADGroupObjectId)
-                $(AdminAADGroupObjectId)
+              AADGroupObjectIdArray: $(DevAADGroupObjectId),$(AdminAADGroupObjectId)
               IsMultiRepoCheckout: false
