add groups back iun

--- a/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
+++ b/Infrastructure-Scripts/Set-AppRoleAssignments/azure-pipelines.yml
@@ -37,5 +37,5 @@ stages:
               ServiceConnection: das-app-role-assignments-CDS
               ResourceName: $(AppServiceName1)
               Tenant: $(Tenant)
-              AADGroupObjectIdArray: ""
+              AADGroupObjectIdArray: $(DevAADGroupObjectId),$(AdminAADGroupObjectId)
               IsMultiRepoCheckout: false
