--- a/Infrastructure-Scripts/New-ConfigurationTableEntry/tools/packages.config
+++ b/Infrastructure-Scripts/New-ConfigurationTableEntry/tools/packages.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="netcoreapp3.1" />
-  <package id="Newtonsoft.Json.Schema" version="2.0.8" targetFramework="netcoreapp3.1" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="netstandard1.0" />
+  <package id="Newtonsoft.Json.Schema" version="2.0.8" targetFramework="netstandard1.3" />
 </packages>
