Dasd 8817 migrate generate config task (#121)
* Copied PS scripts as is from das-azure-pipelines-tasks

* Removed VSTS tracing

* Removed try catch and empty doc blocks

* Added EmojiDictionary to Helpers

* Install Newtonsoft packages and add types

* Refactored package loading

* Replaced Get-VstsTaskVariable with Get-Variable

* Uses AzTable module for storage operations

* Moved success log inside Helpers

* Stripped function from New-ConfigurationTableEntry

* Use try catch to get secrets from env vars

* Ensure error thrown in schema validate fails

* Expand-Schema handles single item arrays as arrays

* Ensure New-ConfigurationEntity throws error if table operations fail

* Added docs to New-ConfigurationTableEntry

* Added a basic unit test

* Added basic test for New-ConfigurationEntity Helper

* Added a test to ensure New-ConfigurationEntity Helper throws

* Added unit tests for Get-StorageAccountKey

* Added additional contexts to New-ConfigurationEntity tests

* Exclude packages folder from quality tests

* Deleted whitespace

* Added integration tests for Helper methods

* Test if SourcePath is a directory

* Retrieval of schema files more robust, added tests

* Tidied up unit tests

* Removed TableName default

* Integration test for secret variable

* Deleted comments

* Fixed param description

* Added comment to IT tests

+semver: minor

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,6 +21,8 @@ stages:
               configFilePath: GitVersion.yml
   - stage: Test
     dependsOn: []
+    variables:
+    - template: Tests/Resources/mock-configuration-schema/mock-variables.yml
     jobs:
       - job: "Windows_PSCore_Build_DAS_Continuous_Integration"
         pool:
@@ -38,9 +40,16 @@ stages:
             displayName: "Validate editorconfig"
             workingDirectory: $(System.DefaultWorkingDirectory)
           - task: PowerShell@2
+            displayName: "Set up variable for integration tests"
+            inputs:
+              targetType: inline
+              script: Write-Output "##vso[task.setvariable variable=MockConfigurationSecretString;issecret=true]SecretFoo"
+          - task: PowerShell@2
             inputs:
               filePath: "Tests/Invoke-Tests.ps1"
               pwsh: true
+            env:
+              MockConfigurationSecretString: $(MockConfigurationSecretString)
           - task: PublishTestResults@2
             displayName: "Publish Test Results **/TEST-*.xml"
             inputs:
